# cv

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  cv_da.aux  index.html  reshume.cabal  style.css  texput.aux  x
.github/workflows/: cd.yml  haskell_ci.yml
app/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: package.cache  reshume-0.1.0.0-inplace.conf
example/: conf.json  cv_da.aux  cv_da.tex  cv_en.aux  cv_en.tex  test.tex
reshume/.github/workflows/: cd.yml
reshume/app/: Main.hs
reshume/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
reshume/example/: cv_en.tex
reshume/src/: Reshume.hs
src/: Reshume.hs  Types.hs  cv_da.tex  cv_en.tex  da.aux  da.tex  en.aux  en.tex
test/: MyLibTest.hs
